--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .background {
   height: 50%;
   padding: 200px 0px;
@@ -36,15 +10,45 @@
   color: black;
 }
 
-.col-md-4 img {
-  width: 100%;
+.col-md-4 {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  border: 1px solid rgb(230, 230, 230);
+  padding: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row {
+  width: 100%;
+  margin: 0px;
+}
+
+.imgdiv {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+.imgdiv img:first-child {
+  width: 100%;
+}
+.imgdiv img:last-child {
+  position: absolute;
+  top: 12px;
+  right: 13px;
+  opacity: 20%;
+  -webkit-filter: grayscale(100%);
+  width: 24px;
+}
+
+.col-md-4 .content {
+  margin: 10px 0px 0px 0px;
+  font-weight: 900;
+}
+
+.col-md-4 .title {
+  margin: 0px;
+}
+
+.col-md-4 .price {
+  font-weight: 700;
 }
