--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,12 @@
 .imgdiv img:first-child {
   width: 100%;
 }
-.imgdiv img:last-child {
+.imgdiv .unlike {
   position: absolute;
   top: 12px;
   right: 13px;
-  opacity: 20%;
   -webkit-filter: grayscale(100%);
+  opacity: 20%;
   width: 24px;
 }
 
@@ -51,4 +51,13 @@
 
 .col-md-4 .price {
   font-weight: 700;
+}
+
+.like {
+  position: absolute;
+  top: 12px;
+  right: 13px;
+  width: 24px;
+  -webkit-filter: grayscale(0%);
+  opacity: 100%;
 }
